--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,9 @@ build:
 
 requirements:
   host:
-    - pip
     - python {{ python_min }}
+    - pip
+    - setuptools
   run:
     - python >={{ python_min }}
     - numpy >=1.13.3
